Update image css in monthly template to ensure centered layout on smaller views

--- a/src/css/monthly.css
+++ b/src/css/monthly.css
@@ -63,6 +63,7 @@ hr.hero--divider {
     width: 170px;
     height: 170px;
     border-radius: 50%;
+    margin: auto !important;
 }
 
 .article--img-full {
